--- a/test.css
+++ b/test.css
@@ -23,6 +23,9 @@ a{
   font-weight: bold;
   font-size: 24px;
 }
+html {
+  scroll-behavior: smooth;
+}
 #Header{
     width: 500px;
     margin-left: auto;
@@ -51,10 +54,11 @@ a{
 
 }
 #LeftNav ul{
+      vertical-align: baseline;
 
 }
 #LeftNav h3{
-
+      visibility: visible;
 }
 #Content{
     width: 700px;
@@ -64,7 +68,12 @@ a{
     border: solid 8px black;
     text-align: center;
     padding: 15px;
+    resize:both;
+    overflow: auto;
+    direction: rtl;
+    unicode-bidi:bidi-override;
 }
+
 #Footer{
     border: solid 8px black;
     text-align: center;
